--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -26,8 +26,7 @@
   </form>
 </div>
 
-
-<leaflet width="100%" height="480px" class="large-12 columns" defaults="defaults" center="center" markers="markers"></leaflet>
+<leaflet width="100%" height="480px" class="large-12 columns" tiles="tiles" defaults="defaults" center="center" markers="markers"></leaflet>
 
 <div ng-show="results.length == 0">no results</div>
 <div ng-show="results.length > 0">
