links in header

--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -2,7 +2,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="#">Etyssa</a></h1>
+        <h1><a ng-href="/">Etyssa</a></h1>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon">
@@ -18,9 +18,9 @@
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
-            <li><a ng-href="#/main">Search</a></li>
-            <li><a ng-href="#/overview">Overview</a></li>
-            <li><a ng-href="#/about">About</a></li>
+            <li><a ui-sref="search">Search</a></li>
+            <li><a ui-sref="overview">Overview</a></li>
+            <li><a ui-sref="about">About</a></li>
           </ul>
         </li>
       </ul>
