--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -26,14 +26,23 @@
   </form>
 </div>
 
-<leaflet width="100%" height="480px" class="large-12 columns" tiles="tiles" defaults="defaults" center="center" markers="markers"></leaflet>
+<leaflet
+  width           = "100%"
+  height          = "480px"
+  class           = "large-12 columns"
+  tiles           = "tiles"
+  defaults        = "defaults"
+  center          = "center"
+  event-broadcast = "events"
+  markers         = "markers">
+</leaflet>
 
 <div ng-show="results.length == 0">no results</div>
 <div ng-show="results.length > 0">
   {{ results.length }} results
   <ul>
-    <li ng-repeat="result in results">
-      <a ng-href="#/entry/{{ result.id }}" ng-bind-html="result.smartTitle"></a>
+    <li ng-repeat="result in results" id="entry_{{result.id}}">
+      <a ui-sref="entry({id:result.id})" ng-bind-html="result.smartTitle" scroll-if="result.id == focus_on_entry_id"></a>
     </li>
   </ul>
 </div>
