--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -803,7 +803,7 @@ $button-bg-color: $primary-color;
 // $include-html-off-canvas-classes: $include-html-classes;
 
 // $tabbar-bg: $oil;
-// $tabbar-height: rem-calc(45);
+$tabbar-height: rem-calc(45);
 // $tabbar-icon-width: $tabbar-height;
 // $tabbar-line-height: $tabbar-height;
 // $tabbar-color: $white;
