--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -1,47 +1,41 @@
-<div class="jumbotron" ng-if="results == undefined">
-  <h1>Proof of Concept</h1>
-  <p class="lead">
-    Allways there to impress chicks and dicks.
-  </p>
-</div>
+<div class="Search">
+  <div class="filter-box">
+    <form
+      name = "searchForm">
+      <select
+        ng-model   = "search_params.selected_category" 
+        ng-change  = "category_selected()"
+        ng-options = "cat as cat.title for cat in categories">
+      </select>
+      <div ng-if="search_params.selected_category">
+        <label ng-repeat="motivation in search_params.selected_category.motivations">
+          <input
+            type            = "checkbox" 
+            name            = "motivations"
+            checklist-model = "search_params.motivations_selected"
+            checklist-value = "motivation"/>
+          <span ng-bind-html = "motivation.label"></span>
+        </label>
+      </div>
+    </form>
+  </div>
 
-<div class="filter-box">
-  <form
-    name = "searchForm">
-    <select
-      ng-model   = "search_params.selected_category" 
-      ng-change  = "category_selected()"
-      ng-options = "cat as cat.title for cat in categories">
-    </select>
-    <div ng-if="search_params.selected_category">
-      <label ng-repeat="motivation in search_params.selected_category.motivations">
-        <input
-          type            = "checkbox" 
-          name            = "motivations"
-          checklist-model = "search_params.motivations_selected"
-          checklist-value = "motivation"/>
-        <span ng-bind-html = "motivation.label"></span>
-      </label>
+  <leaflet
+    tiles    = "tiles"
+    defaults = "defaults"
+    center   = "center"
+    markers  = "markers">
+  </leaflet>
+
+  <div ng-show="results.length == 0">no results</div>
+  <div ng-show="results.length > 0">
+    <div class="results">
+      {{ results.length }} results
+      <ul>
+        <li ng-repeat="result in results" id="entry_{{result.id}}">
+          <a ng-click="focusOnEntry(result)" ng-bind-html="result.smartTitle" scroll-if="result.id == focus_on_entry_id"></a>
+        </li>
+      </ul>
     </div>
-  </form>
-</div>
-
-<leaflet
-  width           = "100%"
-  height          = "480px"
-  class           = "large-12 columns"
-  tiles           = "tiles"
-  defaults        = "defaults"
-  center          = "center"
-  markers         = "markers">
-</leaflet>
-
-<div ng-show="results.length == 0">no results</div>
-<div ng-show="results.length > 0">
-  {{ results.length }} results
-  <ul>
-    <li ng-repeat="result in results" id="entry_{{result.id}}">
-      <a ui-sref="entry({id:result.id})" ng-bind-html="result.smartTitle" scroll-if="result.id == focus_on_entry_id"></a>
-    </li>
-  </ul>
+  </div>
 </div>
