--- a/app/scripts/views/overview.html
+++ b/app/scripts/views/overview.html
@@ -1,2 +1,8 @@
 <h1>Overview</h1>
-<leaflet width="640px" height="480px" defaults="defaults" tiles="tiles" bounds="bounds" center="center" markers="markers"></leaflet>
+<leaflet 
+    width="640px" 
+    height="480px" 
+    defaults="defaults" 
+    tiles="tiles"
+    markers="markers">
+</leaflet>
