--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -29,7 +29,8 @@
           </div>
         </form>
       </div>
-      <div class="results-nb">{{ results.length }} results</div>
+      <div class="results-nb" ng-if="results == undefined || results.length == 0">no results</div>
+      <div class="results-nb" ng-if="results.length > 0">{{ results.length }} results</div>
       <ul>
         <li ng-repeat="result in results" id="entry_{{result.id}}">
           <a
