start details view

--- a/app/scripts/views/entry.html
+++ b/app/scripts/views/entry.html
@@ -1,7 +1,16 @@
-<h2>[{{ entry.category }}] {{ entry.smartTitle }}</h2>
+<h2 ng-bind-html="entry_selected.category"></h2>
+<h3 ng-bind-html="entry_selected.smartTitle"></h3>
+<img ng-src="http://www.gravatar.com/avatar/{{related_user.email_hash}}?d=retro"/>
+par {{entry_selected.creatorNickname}} {{entry_selected.to_address.de_city}} le 
 
-par {{ user.nickname }} le {{ entry.creationDate }}
+<div ng-bind-html="entry_selected.detail"></div>
+
+<div ng-if="entry_selected.links">
+    <div ng-repeat="link in entry_selected.links">
+        
+    </div>
+</div>
 <pre>
-{{ entry | json }}
-{{ user  | json }}
+{{ entry_selected | json }}
+{{ related_user   | json }}
 </pre>
