--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,7 @@ nav.top-bar {
   bottom   : 0;
   top      : $tabbar-height;
   left     : 0;
+  overflow : hidden; 
   .angular-leaflet-map {
     position : absolute;
     right    : 0;
@@ -42,6 +43,20 @@ nav.top-bar {
     box-shadow       : 0px -20px 0px rgba($primary-color, 0.51);
     opacity          : .95;
     padding          : 20px;
+    transition-property: bottom;
+    transition-duration: .5s;
+    &.ng-hide{
+      display: block !important;
+      bottom: -900px;
+    }
+    .close-details {
+      content   :'×';
+      position  : absolute;
+      right     : 10px;
+      top       : -10px;
+      font-size : 3em;
+      cursor    : pointer;
+    }
   }
   .results {
     position         : absolute;
