--- a/app/scripts/views/entry.html
+++ b/app/scripts/views/entry.html
@@ -1,13 +1,13 @@
-<img ng-src="http://www.gravatar.com/avatar/{{related_user.email_hash}}?d=retro"/>
-<h2 ng-bind-html="entry_selected.category"></h2>
+<img class="avatar" ng-src="http://www.gravatar.com/avatar/{{related_user.email_hash}}?d=retro"/>
+<h2 ng-bind-html="entry_selected.category.title"></h2>
 <h3 ng-bind-html="entry_selected.smartTitle"></h3>
-par {{entry_selected.creatorNickname}} {{entry_selected.to_address.de_city}} le 
+Par {{entry_selected.creatorNickname}} {{entry_selected.to_address.de_city}} {{ entry_selected.publish_since_text }}
 
 <div ng-bind-html="entry_selected.detail"></div>
 
 <div ng-if="entry_selected.links">
     <div ng-repeat="link in entry_selected.links">
-        
+
     </div>
 </div>
 <pre>
