--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -32,8 +32,11 @@
         </div>  
       </form>
     </div>
-    <div class="results-nb" ng-if="results == undefined || results.length == 0">no results</div>
-    <div class="results-nb" ng-if="results.length > 0">{{ results.length }} results</div>
+    <h2>
+      Annonces
+      <small ng-if="results == undefined || results.length == 0">no results</small>
+      <small ng-if="results.length > 0">{{ results.length }} results</small>
+    </h2>
     <ul>
       <li ng-repeat="result in results" id="entry_{{result.id}}">
         <a
