mark visited entries

--- a/app/scripts/views/entry.html
+++ b/app/scripts/views/entry.html
@@ -1,16 +1,18 @@
-<img class="avatar" ng-src="http://www.gravatar.com/avatar/{{related_user.email_hash}}?d=retro"/>
-<h2 ng-bind-html="entry_selected.category.title"></h2>
-<h3 ng-bind-html="entry_selected.smartTitle"></h3>
-Par {{entry_selected.creatorNickname}} {{entry_selected.to_address.de_city}} {{ entry_selected.publish_since_text }}
+<div class="details__wrapper">
+  <img class="avatar" ng-src="http://www.gravatar.com/avatar/{{related_user.email_hash}}?d=retro"/>
+  <h2 ng-bind-html="entry_selected.category.title"></h2>
+  <h3 ng-bind-html="entry_selected.smart_title"></h3>
+  Par {{ entry_selected.creator_nickname }} {{ entry_selected.to_address.de_city }} {{ entry_selected.publish_since_text }}
 
-<div ng-bind-html="entry_selected.detail"></div>
+  <div ng-bind-html="entry_selected.detail"></div>
 
-<div ng-if="entry_selected.links">
-    <div ng-repeat="link in entry_selected.links">
-
-    </div>
+  <div ng-if="entry_selected.links">
+      <div ng-repeat="link in entry_selected.links">
+      </div>
+  </div>
+  <!-- <pre>
+  {{ entry_selected | json }}
+  {{ related_user   | json }}
+  </pre> -->
+  
 </div>
-<pre>
-{{ entry_selected | json }}
-{{ related_user   | json }}
-</pre>
