--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -38,7 +38,7 @@
       <small ng-if="results.length > 0">{{ results.length }} results</small>
     </h2>
     <ul>
-      <li ng-repeat="result in results" id="entry_{{result.id}}">
+      <li ng-repeat="result in results" id="entry_{{result.id}}" ng-class="{'visited': visited_results[result.id]}">
         <a
           ng-click     = "focusOnEntry(result)"
           ng-bind-html = "result.smartTitle" ></a>
