--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -103,6 +103,9 @@ nav.top-bar {
         &.visited:before {
           color : rgba($primary-color, 0.3);
         }
+        &.active {
+          background-color: rgba(234, 234, 234, 1);
+        }
       }
     }
   }
