ajout de login et profile ctrl + views

--- a/app/scripts/views/header.html
+++ b/app/scripts/views/header.html
@@ -19,6 +19,7 @@
           <a href="#">Menu</a>
           <ul class="dropdown">
             <li><a ui-sref="search">Search</a></li>
+            <li><a ui-sref="profile">Profile</a></li>
             <li><a ui-sref="overview">Overview</a></li>
             <li><a ui-sref="about">About</a></li>
           </ul>
