--- a/app/scripts/views/search.html
+++ b/app/scripts/views/search.html
@@ -14,7 +14,7 @@
           ng-model   = "search_params.selected_category" 
           ng-change  = "onCategorySelected()"
           ng-options = "cat as cat.title for cat in categories">
-          <option value="">-- choose a category --</option>
+          <option value="">-- Choisissez une catégorie --</option>
         </select>
         <div ng-if="search_params.selected_category">
           <dl class="sub-nav">
