--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,12 +50,12 @@ nav.top-bar {
     .details__navigation {
       position  : absolute;
       right     : 50px;
-      top       : -11px;
-      font-size : 3em;
+      top       : 8px;
+      font-size : 2em;
       .disabled {
-        cursor: default;
-        color: grey;
-        pointer-events: none;
+        cursor         : default;
+        color          : grey;
+        pointer-events : none;
       }
     }
     .close-details {
@@ -88,6 +88,14 @@ nav.top-bar {
     .sub-nav dd {
       margin-bottom: 5px;
     }
+    .favorite-switch {
+      text-align: right;
+      span {
+        position: relative;
+        top: -7px;
+        right: 5px; 
+      }
+    }
     ul {
       list-style: none;
       li {
@@ -108,6 +116,12 @@ nav.top-bar {
         }
         &.visited:before {
           color : rgba($primary-color, 0.3);
+        }
+        &.favorited:before {
+          content     : '\f005' !important;
+        }
+        &.active {
+          background-color: rgba(234, 234, 234, 1);
         }
       }
     }
